k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blt-health
  labels:
    app: blt-health
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blt-health
  template:
    metadata:
      labels:
        app: blt-health
    spec:
      containers:
        - name: blt-health
          image: minerva45/blt-health:v1
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
