k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blt-health
  labels:
    app: blt-health
spec:
  type: ClusterIP
  selector:
    app: blt-health
  ports:
    - name: http
      port: 80
      targetPort: 8000
