k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blt-health
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health/
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Exact
            backend:
              service:
                name: blt-health
                port:
                  number: 80
